force-app/main/default/objects/Opportunity/fields/Candidate_Guide_URL__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Guide_URL__c</fullName>
    <label>Candidate Guide URL</label>
    <type>Url</type>
</CustomField>