force-app/main/default/objects/Opportunity/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <label>Candidate Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>