force-app/main/default/objects/Opportunity/fields/CC_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_Address__c</fullName>
    <label>CC Billing Address</label>
    <type>TextArea</type>
</CustomField>