force-app/main/default/objects/Opportunity/fields/CC_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_City__c</fullName>
    <label>CC Billing City</label>
    <type>TextArea</type>
</CustomField>