force-app/main/default/objects/Opportunity/fields/CC_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_State__c</fullName>
    <label>CC Billing State</label>
    <type>TextArea</type>
</CustomField>