force-app/main/default/objects/Opportunity/fields/CC_Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_Zip_Code__c</fullName>
    <label>CC Billing Zip Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>