force-app/main/default/objects/Opportunity/fields/CC_Exp_Date_mmyy__c.field-meta.xml
<CustomField>
    <fullName>CC_Exp_Date_mmyy__c</fullName>
    <label>CC Exp Date mmyy</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>