force-app/main/default/objects/Opportunity/fields/CC_First_and_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_First_and_Last_Name__c</fullName>
    <label>CC First and Last Name</label>
    <type>TextArea</type>
</CustomField>