force-app/main/default/objects/Opportunity/fields/CC_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Number__c</fullName>
    <label>CC Number</label>
    <length>19</length>
    <maskChar>X</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>