force-app/main/default/objects/Opportunity/fields/Central_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Notes__c</fullName>
    <description>Central Contact Notes</description>
    <label>Central Contact Notes</label>
    <type>TextArea</type>
</CustomField>