force-app/main/default/objects/Opportunity/fields/Central_Contact_Research__c.field-meta.xml
<CustomField>
    <fullName>Central_Contact_Research__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a central contact has been established</description>
    <label>Central Contact Research</label>
    <type>Checkbox</type>
</CustomField>