force-app/main/default/objects/Opportunity/fields/Cert_Deck_Url__c.field-meta.xml
<CustomField>
    <fullName>Cert_Deck_Url__c</fullName>
    <description>Url for this Opportunities Cert Deck. This is a formula field and does not mean the Cert Deck exists in the webapp for this Opportunity.</description>
    <formula>&quot;https://www.fivestarprofessional.com/ago/&quot;&amp;casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Url for this Opportunities Cert Deck. This is a formula field and does not mean the Cert Deck exists in the webapp for this Opportunity.</inlineHelpText>
    <label>Cert Deck Url</label>
    <type>Text</type>
</CustomField>