force-app/main/default/objects/Opportunity/fields/City_Image__c.field-meta.xml
<CustomField>
    <fullName>City_Image__c</fullName>
    <formula>Market_Project__r.CityImageURL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City Image</label>
    <type>Text</type>
</CustomField>