force-app/main/default/objects/Opportunity/fields/Client_Business_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_Objectives__c</fullName>
    <label>Client Business Objectives</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generate additional referrals from clients and professional network</fullName>
            </value>
            <value>
                <fullName>Increase number of new client listings</fullName>
            </value>
            <value>
                <fullName>Retain existing clients</fullName>
            </value>
            <value>
                <fullName>Win a greater percentage of prospective client presentations</fullName>
            </value>
            <value>
                <fullName>Expand geographical market presence and leads</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>