force-app/main/default/objects/Opportunity/fields/Client_Business_Objectives_Other__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_Objectives_Other__c</fullName>
    <label>Client Business Objectives - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>