force-app/main/default/objects/Opportunity/fields/Client_Business_Objectives_Others__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_Objectives_Others__c</fullName>
    <label>Client Business Objectives Others</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>