force-app/main/default/objects/Opportunity/fields/Client_Business_Objectives_Xfer__c.field-meta.xml
<CustomField>
    <fullName>Client_Business_Objectives_Xfer__c</fullName>
    <description>Used in &quot;Log a call with staging&quot; flow, launched by &quot;log a call&quot; button, contains duplicate list of Business Objectives but with a &quot;no change&quot; option so that the flow can be launched without updating the business objective field</description>
    <inlineHelpText>should not be visible on page, contact admin if so</inlineHelpText>
    <label>Client Business Objectives Xfer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO CHANGE</fullName>
                <default>true</default>
                <label>NO CHANGE</label>
            </value>
            <value>
                <fullName>Generate additional referrals from clients and professional network</fullName>
            </value>
            <value>
                <fullName>Increase number of new client listings</fullName>
            </value>
            <value>
                <fullName>Retain existing clients</fullName>
            </value>
            <value>
                <fullName>Win a greater percentage of prospective client presentations</fullName>
            </value>
            <value>
                <fullName>Expand geographical market presence and leads</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>