force-app/main/default/objects/Opportunity/fields/Client_Goal__c.field-meta.xml
<CustomField>
    <fullName>Client_Goal__c</fullName>
    <description>Created on May 14, 2019 for the sales team</description>
    <inlineHelpText>Client goal at Market Launch</inlineHelpText>
    <label>Client Goal</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>