force-app/main/default/objects/Opportunity/fields/Client_Growth_Objective__c.field-meta.xml
<CustomField>
    <fullName>Client_Growth_Objective__c</fullName>
    <label>Client Growth Objective</label>
    <length>255</length>
    <type>Text</type>
</CustomField>