force-app/main/default/objects/Opportunity/fields/Client_Growth_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Client_Growth_Objectives__c</fullName>
    <label>Client Growth Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>