force-app/main/default/objects/Opportunity/fields/Client_Interested_in_Presentation_Tool__c.field-meta.xml
<CustomField>
    <fullName>Client_Interested_in_Presentation_Tool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this box if the client expressed interest in using our presentation software.</description>
    <inlineHelpText>Please check this box if the client expressed interest in using our presentation software.</inlineHelpText>
    <label>Client Interested in Presentation Tool</label>
    <type>Checkbox</type>
</CustomField>