force-app/main/default/objects/Opportunity/fields/Client_Network__c.field-meta.xml
<CustomField>
    <fullName>Client_Network__c</fullName>
    <label>Client Network</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>