force-app/main/default/objects/Opportunity/fields/Client_Success_Tracker_URL__c.field-meta.xml
<CustomField>
    <fullName>Client_Success_Tracker_URL__c</fullName>
    <formula>(Contact__r.Client_Success_Tracker_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Success Tracker URL</label>
    <type>Text</type>
</CustomField>