force-app/main/default/objects/Opportunity/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <formula>(Contact__r.Client_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Type</label>
    <type>Text</type>
</CustomField>