force-app/main/default/objects/Opportunity/fields/Closing_Objection__c.field-meta.xml
<CustomField>
    <fullName>Closing_Objection__c</fullName>
    <description>Closing Objection from the webapp&apos;s Opportunity Objections. Modifying this value in Salesforce does not push the value to the webapp.</description>
    <inlineHelpText>Closing Objection from the webapp&apos;s Opportunity Objections. Modifying this value in Salesforce does not push the value to the webapp.</inlineHelpText>
    <label>Closing Objection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>