force-app/main/default/objects/Opportunity/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>Account.Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>