force-app/main/default/objects/Opportunity/fields/Company_Specific_AG__c.field-meta.xml
<CustomField>
    <fullName>Company_Specific_AG__c</fullName>
    <formula>IF(CONTAINS(ACDF_Branch_Office__c, &quot;Wells Fargo&quot;),  Pardot_Friendly_WF_AG_Link__c , IF(CONTAINS(ACDF_Branch_Office__c, &quot;Morgan Stanley&quot;),  Pardot_Friendly_MS_AG_Link__c ,  Pardot_Friendly_AG_Link__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Specific AG</label>
    <type>Text</type>
</CustomField>