force-app/main/default/objects/Opportunity/fields/Compliance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Contact__c</fullName>
    <label>Compliance Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>