force-app/main/default/objects/Opportunity/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <description>How much confidence does the Account Manager have in the Importance score? 1-10</description>
    <inlineHelpText>How much confidence does the Account Manager have in the Importance score? 1-10</inlineHelpText>
    <label>Confidence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>