force-app/main/default/objects/Opportunity/fields/Contact_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Street__c</fullName>
    <formula>Contact__r.MailingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Street</label>
    <type>Text</type>
</CustomField>