force-app/main/default/objects/Opportunity/fields/Contact_Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_Zip__c</fullName>
    <formula>Contact__r.MailingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mailing Zip</label>
    <type>Text</type>
</CustomField>