force-app/main/default/objects/Opportunity/fields/Contact_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact_SF_ID__c</fullName>
    <formula>casesafeid(Contact__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact SF ID</label>
    <type>Text</type>
</CustomField>