force-app/main/default/objects/Opportunity/fields/Contact_Verification__c.field-meta.xml
<CustomField>
    <fullName>Contact_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Verification: Stage Comment</label>
    <type>Checkbox</type>
</CustomField>