force-app/main/default/objects/Opportunity/fields/Core_Market__c.field-meta.xml
<CustomField>
    <fullName>Core_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Market</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipLabel>Opportunities (Core Market)</relationshipLabel>
    <relationshipName>Alt_Media_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>