force-app/main/default/objects/Opportunity/fields/CST_Follow_Up_Call_Complete__c.field-meta.xml
<CustomField>
    <fullName>CST_Follow_Up_Call_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CST Follow-Up Call Complete</label>
    <type>Checkbox</type>
</CustomField>