force-app/main/default/objects/Opportunity/fields/Current_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_Mobile_Phone__c</fullName>
    <label>FSP Mobile Phone</label>
    <type>Phone</type>
</CustomField>