force-app/main/default/objects/Opportunity/fields/Current_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone__c</fullName>
    <label>FSP Phone</label>
    <type>Phone</type>
</CustomField>