force-app/main/default/objects/Opportunity/fields/Custom_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Custom_Segmentation__c</fullName>
    <description>This field is used for custom segmentation specific to the Opportunity. (e.g. FML segmentation, ecommerce segmentation, etc.)</description>
    <inlineHelpText>This field is used for custom segmentation specific to the Opportunity. (e.g. FML segmentation, ecommerce segmentation, etc.)</inlineHelpText>
    <label>Custom Segmentation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>