force-app/main/default/objects/Opportunity/fields/Data_Issue__c.field-meta.xml
<CustomField>
    <fullName>Data_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Issue</label>
    <type>Checkbox</type>
</CustomField>