force-app/main/default/objects/Opportunity/fields/Data_Issue_Details__c.field-meta.xml
<CustomField>
    <fullName>Data_Issue_Details__c</fullName>
    <label>Data Issue Details</label>
    <type>TextArea</type>
</CustomField>