force-app/main/default/objects/Opportunity/fields/Data_Issue_Reported__c.field-meta.xml
<CustomField>
    <fullName>Data_Issue_Reported__c</fullName>
    <label>Data Issue Reported</label>
    <type>DateTime</type>
</CustomField>