force-app/main/default/objects/Opportunity/fields/Data_Issue_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Data_Issue_Reporter__c</fullName>
    <label>Data Issue Reporter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>