force-app/main/default/objects/Opportunity/fields/Date_Goal_was_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Goal_was_Reassigned__c</fullName>
    <label>Date Goal was Reassigned</label>
    <type>Date</type>
</CustomField>