force-app/main/default/objects/Opportunity/fields/Date_of_most_recent_login__c.field-meta.xml
<CustomField>
    <fullName>Date_of_most_recent_login__c</fullName>
    <formula>Contact__r.Date_of_most_recent_login__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of most recent login</label>
    <type>DateTime</type>
</CustomField>