force-app/main/default/objects/Opportunity/fields/days_since_last_contact__c.field-meta.xml
<CustomField>
    <fullName>days_since_last_contact__c</fullName>
    <formula>TODAY()- Last_Call_Date__c</formula>
    <label>Days since last contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>