force-app/main/default/objects/Opportunity/fields/Dialer_Ready__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Ready__c</fullName>
    <description>pick list for the dialer to load the opportunity</description>
    <inlineHelpText>Value must be set to yes for the dialer to load</inlineHelpText>
    <label>Dialer Ready</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>