force-app/main/default/objects/Opportunity/fields/Dialer_Status__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Status__c</fullName>
    <label>Dialer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>