force-app/main/default/objects/Opportunity/fields/dialforce__DS_Date_of_Last_Dispo__c.field-meta.xml
<CustomField>
    <fullName>dialforce__DS_Date_of_Last_Dispo__c</fullName>
    <label>DS Date of Last Dispo</label>
    <type>Date</type>
</CustomField>