force-app/main/default/objects/Opportunity/fields/DialSource__Datetime_of_Last_Disposition_DS__c.field-meta.xml
<CustomField>
    <fullName>DialSource__Datetime_of_Last_Disposition_DS__c</fullName>
    <description>Time stamp of when the last Disposition was clicked</description>
    <label>Datetime of Last Disposition</label>
    <type>DateTime</type>
</CustomField>