force-app/main/default/objects/Opportunity/fields/DialSource__DS_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>DialSource__DS_Owner_ID__c</fullName>
    <description>The record owner&apos;s Salesforce ID. Used in Campaign source reports to distribute the records using the Record Owner Distribution feature</description>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Owner ID</label>
    <type>Text</type>
</CustomField>