force-app/main/default/objects/Opportunity/fields/DialSource__Last_Call_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>DialSource__Last_Call_Campaign_Name__c</fullName>
    <description>Name of the Call Campaign the record was last called from</description>
    <label>Last Call Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>