force-app/main/default/objects/Opportunity/fields/Do_Not_Call_Reported__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Reported__c</fullName>
    <label>Do Not Call Reported</label>
    <type>DateTime</type>
</CustomField>