force-app/main/default/objects/Opportunity/fields/Do_Not_Call_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Reporter__c</fullName>
    <label>Do Not Call Reporter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>