force-app/main/default/objects/Opportunity/fields/Do_Not_Email_Reported__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Email_Reported__c</fullName>
    <label>Do Not Email Reported</label>
    <type>DateTime</type>
</CustomField>