force-app/main/default/objects/Opportunity/fields/Do_Not_Reassign__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If box is checked, this client must stay with the Original AM</description>
    <label>Do Not Reassign</label>
    <type>Checkbox</type>
</CustomField>