force-app/main/default/objects/Opportunity/fields/Email2_Formula__c.field-meta.xml
<CustomField>
    <fullName>Email2_Formula__c</fullName>
    <formula>Contact__r.Email_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email2 Formula</label>
    <type>Text</type>
</CustomField>