force-app/main/default/objects/Opportunity/fields/Email_Templates_Award_Guide__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Award_Guide__c</fullName>
    <formula>Market_Project__r.Award_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Award Guide</label>
    <type>Text</type>
</CustomField>