force-app/main/default/objects/Opportunity/fields/Email_Templates_Informalname__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Informalname__c</fullName>
    <formula>IF(NOT(ISBLANK(  Nickname__c  )),Nickname__c , First_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Informal Name</label>
    <type>Text</type>
</CustomField>