force-app/main/default/objects/Opportunity/fields/Email_Templates_Issue_s__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Issue_s__c</fullName>
    <formula>Market_Project__r.Issue_Issues__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Issue(s)</label>
    <type>Text</type>
</CustomField>