force-app/main/default/objects/Opportunity/fields/Email_Templates_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Magazine__c</fullName>
    <formula>Market_Project__r.Magazine_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Magazine</label>
    <type>Text</type>
</CustomField>