force-app/main/default/objects/Opportunity/fields/Email_Templates_Magazine_Section__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Magazine_Section__c</fullName>
    <formula>Market_Project__r.LY_Magazine_Section__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Magazine Section</label>
    <type>Text</type>
</CustomField>