force-app/main/default/objects/Opportunity/fields/Email_Templates_Market_City__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Market_City__c</fullName>
    <formula>Market_Project__r.Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Market City</label>
    <type>Text</type>
</CustomField>