force-app/main/default/objects/Opportunity/fields/Email_Templates_Methodology_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Methodology_URL__c</fullName>
    <formula>Market_Project__r.AG_URL_as_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Methodology URL</label>
    <type>Text</type>
</CustomField>