force-app/main/default/objects/Opportunity/fields/Email_Templates_Month__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Month__c</fullName>
    <formula>Market_Project__r.Publication_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Month</label>
    <type>Text</type>
</CustomField>