force-app/main/default/objects/Opportunity/fields/Email_Templates_Overview_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Overview_Guidelines__c</fullName>
    <formula>Market_Project__r.Product_Overview_Ad_Guidelines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Overview&amp;Guidelines</label>
    <type>Text</type>
</CustomField>