force-app/main/default/objects/Opportunity/fields/Email_Templates_Profession__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Profession__c</fullName>
    <formula>IF( Market_Project__r.Profession__c = &quot;RE&quot;, &quot;Real Estate Agent&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;HA&quot;, &quot;Home/Auto Insurance Professional&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;WM&quot;, &quot;Wealth Manager&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;MP&quot;, &quot;Mortgage Professional&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;CPA&quot;, &quot;Certified Public Accountant&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;EPA&quot;, &quot;Estate Planning Attorney&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;DEN&quot;, &quot;Dentist&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;PT/OT&quot;, &quot;Physical Therapist/Occupational Therapist&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;CHI&quot;, &quot;Chiropractor&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;FS&quot;, &quot;Financial Services Professional&quot;, null)&amp;
IF( Market_Project__r.Profession__c = &quot;IP&quot;, &quot;Investment Professional&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Profession</label>
    <type>Text</type>
</CustomField>