force-app/main/default/objects/Opportunity/fields/Email_Templates_Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Publication_Year__c</fullName>
    <formula>Market_Project__r.Publication_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: Publication Year</label>
    <type>Text</type>
</CustomField>