force-app/main/default/objects/Opportunity/fields/Email_Templates_Research_Form_URL_1__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Research_Form_URL_1__c</fullName>
    <formula>Market_Project__r.Form_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates Research Form URL 1</label>
    <type>Text</type>
</CustomField>