force-app/main/default/objects/Opportunity/fields/Email_Templates_Research_Form_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Research_Form_URL_2__c</fullName>
    <formula>Market_Project__r.Research_Form_URL_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates Research Form URL 2</label>
    <type>Text</type>
</CustomField>