force-app/main/default/objects/Opportunity/fields/Email_Templates_Video__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_Video__c</fullName>
    <formula>Market_Project__r.Award_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates Video</label>
    <type>Text</type>
</CustomField>