force-app/main/default/objects/Opportunity/fields/Email_Templates_WFA_Award_Guide__c.field-meta.xml
<CustomField>
    <fullName>Email_Templates_WFA_Award_Guide__c</fullName>
    <formula>Market_Project__r.WF_Award_Guide__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Templates: WFA Award Guide</label>
    <type>Text</type>
</CustomField>