force-app/main/default/objects/Opportunity/fields/EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>EmailAddress__c</fullName>
    <formula>Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>