force-app/main/default/objects/Opportunity/fields/Estimated_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Purchase__c</fullName>
    <description>Used to create forecast number</description>
    <label>Estimated Purchase</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>