force-app/main/default/objects/Opportunity/fields/Expand_beyond_current_network_geography__c.field-meta.xml
<CustomField>
    <fullName>Expand_beyond_current_network_geography__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expand beyond current network/geography</label>
    <type>Checkbox</type>
</CustomField>