force-app/main/default/objects/Opportunity/fields/Extension_Formula__c.field-meta.xml
<CustomField>
    <fullName>Extension_Formula__c</fullName>
    <formula>Contact__r.Extension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension</label>
    <type>Text</type>
</CustomField>